# pdf_merge

./: .gitignore  CMakeLists.txt  CMakeLists.txt.in  README.md  generate-vs2013.bat  pdfwriter.in
pdf_merge/include/: arg_parser.h  pdf_generator.h
pdf_merge/src/: arg_parser.cpp  main.cpp  pdf_generator.cpp
pdf_merge/tests/: test_arg_parser.cpp  test_pdf_generator.cpp
